Bug 850684.  Make sure offset* is computed correctly on absolutely positioned kids of relatively positioned elements with scrolllframes and borders.  r=mats

The check for isAbsolutelyPositioned was an old incorrect attempt to fix bug
81290.  We have since added the proper fix (not adding offsets of the offset
parent frame) in bug 375003.

MozReview-Commit-ID: 7NgnfrYcs8h